header content vertical-align fix

--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -12,9 +12,21 @@
         <div class="background-container">
             <div id="picoutput"></div>
             <div class="page-header">
-                <h1><img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-bottom: 5px"><a onclick="backMain()" class="head_title" style="margin-left: 10px; cursor: pointer">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span> </a></h1>
+                <div class="row" style="max-height: 60px">
+                    <div class="col-sm-1" style="max-height: 60px ;vertical-align: center">
+                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
+                    </div>
+
+                    <div class="col-sm-5" style="max-height: 60px; margin-left: -120px">
+                        <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
+                            <h1 style="max-height: 40px;">
+                                С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span>
+                            </h1>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="row" style="width: 100%">
+            <div class="row" style="width: 100%; margin-top: 20px">
                 <div class="column" style="border-right: 2px solid #eeeeee; width: 12%; height: 900px; margin-left: 50px;">
                     <div  style="border-bottom: 1px solid #eeeeee; height: 35px; margin-left: 15px; ">
                         <div class="row">
