--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,10 +13,21 @@
         <div class="background-container">
             <div id="picoutput"></div>
             <div class="page-header">
-                <h1><img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-bottom
-                : 5px"><a class="head_title" style="cursor: pointer; margin-left: 10px" onclick="main_reload()">С-ПЛАСТ </a></h1>
+                <div class="row" style="max-height: 60px">
+                    <div class="col-sm-1" style="max-height: 60px ;vertical-align: center">
+                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
+                    </div>
+
+                    <div class="col-sm-5" style="max-height: 60px; margin-left: -120px">
+                        <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="main_reload()">
+                            <h1 style="max-height: 40px;">
+                                С-ПЛАСТ
+                            </h1>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="container-fluid" style="padding-top: 0px; padding-left: 30px">
+            <div class="container-fluid" style="padding-top: 20px; padding-left: 30px">
                 <button id="release" name="but1" value="val_1" type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#exampleModalCenter" onclick="">
                     Выпустить
                 </button>
