--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -11,9 +11,21 @@
 <body>
     <div class="background-container">
         <div id="picoutput"></div>
-        <div class="page-header">
-            <h1><img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-bottom: 5px"><a onclick="backMain()" class="head_title" style="margin-left: 10px">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">статистика</span> </a></h1>
-        </div>
+            <div class="page-header">
+                <div class="row" style="max-height: 60px">
+                    <div class="col-sm-1" style="max-height: 60px ;vertical-align: center">
+                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
+                    </div>
+
+                    <div class="col-sm-5" style="max-height: 60px; margin-left: -120px">
+                        <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
+                            <h1 style="max-height: 40px;">
+                                С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">статистика</span>
+                            </h1>
+                        </a>
+                    </div>
+                </div>
+            </div>
         <div class="content-box" style=" text-align: center">
             <a style="font-size: 25px; font-family: Calibri; font-weight: normal">Производство</a>
         </div>
