header adaptive fix

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,12 +13,12 @@
         <div class="background-container">
             <div id="picoutput"></div>
             <div class="page-header">
-                <div class="row" style="max-height: 60px">
-                    <div class="col-sm-1" style="max-height: 60px ;vertical-align: center">
+                <div class="row" style="max-height: 60px; margin-left: 0px; margin-right: 0px">
+                    <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
                         <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
                     </div>
 
-                    <div class="col-sm-5" style="max-height: 60px; margin-left: -120px">
+                    <div class="col-sm-5" style="max-height: 60px; margin-left: -5.5%">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="main_reload()">
                             <h1 style="max-height: 40px;">
                                 С-ПЛАСТ
