structure some render fix

--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="row" style="width: 100%; margin-top: 20px">
-                <div class="column" style="border-right: 2px solid #eeeeee; width: 12%; height: 900px; margin-left: 50px;">
+                <div class="col-sm-2" style="border-right: 2px solid #eeeeee; width: 12%; height: 900px; margin-left: 50px;">
                     <div  style="border-bottom: 1px solid #eeeeee; height: 35px; margin-left: 15px; ">
                         <div class="row">
                             <select id="cb_tree" class="form-select custom_hov" aria-label="Default select example" style="width: 219px; height: 34px; font-size: 19px; border: none; outline: none; margin-left: -15px">
@@ -101,7 +101,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="column" style="margin-left: -1px; margin-top: 7px">
+                <div class="col-sm-6" style="margin-left: -15px; margin-top: 7px">
                     <div class=" container row" style="margin-top: -20px">
                         <table id="mpz_tbl" class=" table table-bordered"  style="margin-bottom: 30px">
                             <thead class="">
